# mc

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  railway.json
bench/: REPORT.md  mock-openrouter.mjs  results.json  run-all.mjs  run-rust.mjs  run-rust.sh  run-ts.mjs  serde-payload.mjs  smoke-real.mjs
branding/: package-lock.json  package.json  tsconfig.json
crates/mc-cli/: Cargo.toml
crates/mc-cli/src/: agent_cli.rs  content.rs  game.rs  main.rs  session.rs
crates/mc-cli/src/agent_cli/: render.rs  tests.rs
crates/mc-core/: Cargo.toml
crates/mc-core/src/: account.rs  diagnostics.rs  error.rs  friend.rs  fs.rs  host.rs  lan_world.rs  lib.rs  lobby.rs  notification.rs  paths.rs  realm.rs  server.rs  server_ping.rs  settings.rs  skin.rs  system.rs
crates/mc-core/src/agent/: compatibility.rs  conversation_privacy.rs  llm.rs  mod.rs  openai.rs  runtime.rs  session.rs  state.rs  wiki.rs  workflow.rs
crates/mc-core/src/agent/chat/: mod.rs  prompt.rs  run.rs  store.rs  tests.rs  tools.rs
crates/mc-core/src/agent/state/: restrictions.rs  tests.rs
crates/mc-core/src/agent/tools/: build_modpack.rs  deep_diagnosis.rs  diagnose_instance.rs  fake_provider.rs  inspect_base_modpack.rs  install_modpack.rs  list_instances.rs  mod.rs  mod_get_detail.rs  resolve_mods.rs  search_base_modpacks.rs  search_mods.rs  tests.rs  validate_modpack_plan.rs  wiki.rs
crates/mc-core/src/agent/tools/tests/: core.rs  diagnostics.rs  mod.rs  wiki_cache.rs  wiki_sources.rs  wiki_structured.rs
crates/mc-core/src/agent/tools/wiki/: cache.rs  chunk.rs  ftb.rs  mod.rs  privacy.rs  privacy_tests.rs  project.rs  search.rs  sources.rs
crates/mc-core/src/agent/tools/wiki/structured/: kubejs.rs  mod.rs  recipes.rs
crates/mc-core/src/agent/workflow/: agent_loop.rs  approvals.rs  artifacts.rs  base_modlist.rs  base_search.rs  customization.rs  execution.rs  execution_tool.rs  llm_io.rs  react.rs  requirements.rs  tests.rs  types.rs
crates/mc-core/src/agent/workflow/customization/: planning_state.rs  tests.rs
crates/mc-core/src/agent/workflow/execution/: archive_io.rs  manifest.rs  tests.rs
crates/mc-core/src/agent/workflow/tests/: artifact_execution.rs  customization_flow.rs  execution_flow.rs  react_contract.rs  requirements_and_search.rs
crates/mc-core/src/auth/: kobe_creds.rs  mod.rs  msa.rs  offline.rs  secret.rs  store.rs  yggdrasil.rs
crates/mc-core/src/auth/msa/: mod.rs  tests.rs
crates/mc-core/src/auth/store/: mod.rs  tests.rs
crates/mc-core/src/auth/yggdrasil/: mod.rs  tests.rs
crates/mc-core/src/diagnostics/: mod.rs  tests.rs
crates/mc-core/src/download/: checksum.rs  downloader.rs  mirror.rs  mod.rs  murmur2.rs  tests.rs
crates/mc-core/src/fs/: mod.rs  tests.rs
crates/mc-core/src/instance/: config.rs  install_mod.rs  item_icons.rs  lifecycle.rs  mod.rs  mods.rs  packs.rs  screenshots.rs  servers.rs  tests.rs  update.rs  world.rs
crates/mc-core/src/instance/item_icons/: assets.rs  mod.rs  tags.rs  tests.rs
crates/mc-core/src/instance/lifecycle/: mod.rs  mrpack.rs  tests.rs
crates/mc-core/src/instance/mods/: meta.rs  mod.rs  tests.rs
crates/mc-core/src/instance/packs/: mod.rs  tests.rs
crates/mc-core/src/instance/world/: mod.rs  tests.rs
crates/mc-core/src/java/: detect.rs  install.rs  mod.rs  version.rs
crates/mc-core/src/launch/: command.rs  mod.rs
crates/mc-core/src/loader/: core.rs  fabric.rs  forge.rs  installer.rs  mod.rs  neoforge.rs  quilt.rs  versions.rs
crates/mc-core/src/meta/: mod.rs
crates/mc-core/src/modpack/: mod.rs  update.rs
crates/mc-core/src/modpack/export/: curseforge.rs  mod.rs  modlist.rs  modrinth.rs  tests.rs  walk.rs  zip.rs
crates/mc-core/src/modpack/formats/: atlauncher.rs  curseforge.rs  mcbbs.rs  mod.rs  mrpack.rs  multimc.rs  packwiz.rs  technic.rs
crates/mc-core/src/modpack/formats/packwiz/: mod.rs  tests.rs
crates/mc-core/src/modpack/import/: archive.rs  curseforge.rs  engine.rs  mcbbs.rs  mod.rs  modrinth.rs  multimc.rs  tests.rs
crates/mc-core/src/modpack/import/archive/: mod.rs  tests.rs
crates/mc-core/src/modpack/import/tests/: curseforge.rs  dispatch.rs  mcbbs.rs  mod.rs  modrinth.rs  multimc.rs
crates/mc-core/src/modplatform/: curseforge.rs  dependency.rs  mod.rs  modrinth.rs  provider.rs
crates/mc-core/src/modplatform/curseforge/: api.rs  dto.rs  mod.rs  provider.rs  tests.rs
crates/mc-core/src/modplatform/dependency/: mod.rs  tests.rs
crates/mc-core/src/modplatform/modrinth/: api.rs  cache.rs  dto.rs  facets.rs  mod.rs  provider.rs  tests.rs
crates/mc-core/src/modplatform/provider/: mod.rs  tests.rs
crates/mc-core/src/realm/: api.rs  mod.rs  sync.rs  tests.rs
crates/mc-core/src/version/: format.rs  gradle.rs  library.rs  mod.rs  pack.rs  profile.rs  rule.rs
crates/mc-core/src/version/pack/: mod.rs  tests.rs
crates/mc-server/: .env.example  Cargo.toml  docker-compose.yml
crates/mc-server/src/: account.rs  auth.rs  db.rs  friend.rs  history.rs  main.rs  meta.rs  news.rs  notification.rs  realm.rs  session.rs  share.rs
crates/mc-server/src/realm/: handlers.rs  mod.rs  store.rs  tests.rs
desktop/: MIGRATION.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json  tauri.e2e.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.txt  icon.icns
desktop/src-tauri/resources/easytier/: README.md
desktop/src-tauri/src/: agent_history.rs  commands.rs  gallery.rs  lib.rs  logging.rs  main.rs
desktop/src-tauri/src/commands/: account.rs  agent.rs  agent_tests.rs  content.rs  game.rs  instance.rs  kobe.rs  lobby.rs  mod.rs  modpack.rs  modpack_update.rs  realm.rs  social.rs  system.rs
desktop/src-tauri/tests/: agent_history.rs
docs/: 00-overview.md  01-launch-chain.md  02-features.md  03-tech-stack.md  04-rust-tauri-design.md  05-ui-design-classic.md  05-ui-design-pcl.md  06-ui-layout-synthesis.md  07-directory-model-portability.md  08-data-layer-and-lite-server.md  (+3 more)
(+333 files in other folders)
