[workspace]
resolver = "2"
members = [
    "crates/mc-types",
    "crates/mc-core",
    "crates/mc-cli",
    "crates/mc-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["mc-launcher contributors"]
repository = "https://github.com/sma1lboy/mc-launcher"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "gzip", "cookies"] }
futures = "0.3"
tokio-util = "0.7"
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
rayon = "1"
zip = "2"
tar = "0.4"
flate2 = "1"
fastnbt = "2"
trash = "5"
reflink-copy = "0.1"
fs4 = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
