[workspace]
resolver = "2"
members = [
    "crates/mc-types",
    "crates/mc-core",
    "crates/mc-cli",
    "crates/mc-server",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["mc-launcher contributors"]
repository = "https://github.com/sma1lboy/mc-launcher"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
# 仅启用实际用到的 tokio 功能(替代 "full",缩小二进制):mc-core/cli/desktop 用 sync/fs/
# io-util/process/time + 运行时;net 仅 mc-server(axum)需要,见其 Cargo.toml 单独追加。
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util", "process", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "gzip", "cookies"] }
futures = "0.3"
tokio-util = "0.7"
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
rayon = "1"
# 整合包/存档 zip 只用 deflate(+ stored,恒可用);默认特性会拉入 zstd/bzip2/lzma 解码器,
# 体积可观且我们用不到,故关掉默认特性只留 deflate。
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"
fastnbt = "2"
trash = "5"
reflink-copy = "0.1"
fs4 = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
