[package]
name = "mc-launcher-desktop"
version = "0.1.0"
edition = "2021"
description = "Tauri v2 desktop shell for mc-launcher: thin glue over mc-core."
license = "MIT"

# crate-type 同时给出 staticlib/cdylib(移动端与桌面端 Tauri 需要)与 rlib
# (供 main.rs 这个二进制 crate 通过 mc_launcher_desktop_lib::run() 调用)。
[lib]
name = "mc_launcher_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri v2 外壳本体 + shell 插件(打开链接/文件)+ dialog 插件(整合包导入/导出的文件选择)。
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# 统一日志:收集 mc-core(daemon)的 tracing 事件 + 前端(client)经命令转发的日志,
# 按日滚动写到全局日志目录。
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = "0.2"
# 纯逻辑内核与共享 DTO,经 path 依赖引入(不走父 workspace)。
mc-core = { path = "../../crates/mc-core" }
mc-types = { path = "../../crates/mc-types" }

# 让本包脱离父级 mc-launcher workspace 独立成一个 cargo 包。
# 空 [workspace] 表声明"这里就是 workspace 根",从而不会被 ../../Cargo.toml 收编。
[workspace]
